// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TraceName> renders empty string error in error state 1`] = `
<span
  className="TraceName is-error "
>
  <BreakableText
    className="BreakableText"
    text="Error: Unknown error"
    wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
  />
</span>
`;

exports[`<TraceName> renders error object in error state 1`] = `
<span
  className="TraceName is-error "
>
  <BreakableText
    className="BreakableText"
    text="ERROR-OBJECT-MESSAGE"
    wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
  />
</span>
`;

exports[`<TraceName> renders error object with empty message in error state 1`] = `
<span
  className="TraceName is-error "
>
  <BreakableText
    className="BreakableText"
    text="Error"
    wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
  />
</span>
`;

exports[`<TraceName> renders in error state 1`] = `
<span
  className="TraceName is-error "
>
  <BreakableText
    className="BreakableText"
    text="TEST-ERROR-MESSAGE"
    wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
  />
</span>
`;

exports[`<TraceName> renders in loading state 1`] = `
<span
  className="TraceName  "
>
  <LoadingIndicator
    centered={false}
    small={true}
  />
</span>
`;

exports[`<TraceName> renders with className 1`] = `
<span
  className="TraceName  TEST-CLASS-NAME"
>
  <BreakableText
    className="BreakableText"
    text="<trace-without-root-span>"
    wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
  />
</span>
`;

exports[`<TraceName> renders with default props 1`] = `
<span
  className="TraceName  "
>
  <BreakableText
    className="BreakableText"
    text="<trace-without-root-span>"
    wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
  />
</span>
`;

exports[`<TraceName> renders with traceName 1`] = `
<span
  className="TraceName  "
>
  <BreakableText
    className="BreakableText"
    text="TEST-TRACE-NAME"
    wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
  />
</span>
`;
